package com.eventmanagementsystem.repository;

public interface TicketRepository{
}
